Fixed logo horizontal align on mobile layout

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -47,6 +47,7 @@
 
 @media screen and (max-width: 1000px) {
   .header {
+    text-align: center;
     flex-direction: column;
     justify-content: center;
   }
